Twitter endpoint rework
