# docs/api.yaml
@@ -95,10 +95,6 @@ paths:
                 $ref: '#/components/schemas/Error'
         '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '500':
           description: Internal Server Error
           content:
@@ -134,10 +130,6 @@ paths:
                 $ref: '#/components/schemas/Error'
         '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '500':
           description: Internal Server Error
           content:
@@ -165,10 +157,6 @@ paths:
                       type: string
         '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '500':
           description: Internal Server Error
           content:
@@ -204,10 +192,6 @@ paths:
           description: Success
         '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '500':
           description: Internal Server Error
           content:
@@ -247,6 +231,8 @@ paths:
           schema:
             type: integer
             format: int32
+            minimum: 5
+            maximum: 100
       responses:
         '200':
           description: Success
@@ -255,21 +241,27 @@ paths:
               schema:
                 type: object
                 properties:
-                  tweets:
-                    type: array
-                    items:
-                        type: object
-                        properties:
-                          id:
-                            type: string
-                          content:
-                            type: string
-                          createdAt:
-                            type: string
-                            format: date-time
-                          realnessScore:
-                            type: integer
-                            format: int32
+                  result:
+                    type: object
+                    properties:
+                      total:
+                        type: integer
+                        description: The total number of results.
+                        example: 100
+                      authentic:
+                        type: number
+                        format: float
+                        description: The percentage of authentic results.
+                        example: 92.2
+                      unauthentic:
+                        type: number
+                        format: float
+                        description: The percentage of unauthentic results.
+                        example: 0.8
+                    required:
+                      - total
+                      - authentic
+                      - unauthentic
         '400':
           description: Bad Request
           content:
@@ -278,10 +270,6 @@ paths:
                 $ref: '#/components/schemas/Error'
         '401':
           description: Unauthorized
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
         '500':
           description: Internal Server Error
           content:
