# pkg/api/twitter.go
@@ -10,13 +10,12 @@ type GetTweetsRequest struct {
 }
 
 type GetTweetsResponse struct {
-	Error  string  `json:"error,omitempty"`
-	Tweets []Tweet `json:"tweets"`
+	Error  string    `json:"error,omitempty"`
+	Result Analytics `json:"result,omitempty"`
 }
 
-type Tweet struct {
-	ID            string    `json:"id"`
-	Content       string    `json:"content"`
-	CreatedAt     time.Time `json:"createdAt"`
-	RealnessScore float32   `json:"realnessScore"`
+type Analytics struct {
+	Total       int     `json:"total"`
+	Authentic   float32 `json:"authentic"`
+	Unauthentic float32 `json:"unauthentic"`
 }
